addition of my profile picure.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- About Me Section -->
     <div class="flex-container row">
         <div class="contact-me">
-            <img src="./Images/profilepic.jpg" alt="my profile picture">
+            <img src="./Images/Mypicture.png" alt="my profile picture">
             <h3>Contact me:</h3>
             <div>
                 <a href="https://github.com/amaxtier"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github grow" viewBox="0 0 16 16">
