--- a/index.html
+++ b/index.html
@@ -10,33 +10,32 @@
     <!-- NAV BAR -->
     <nav class="navbar">
         <ul class="nav-list grow">
-            <li>Home</li>
-            <li>About Me</li>
-            <li>Experience</li>
-            <li>Skills</li>
-            <li>Contact Me</li>
-            <li>My Resume</li>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="./Curriculum/CV - Eduardo R. Mejía.pdf" download>My Resume</a></li>
         </ul>
     </nav>
 
     <!-- Title -->
     <div class="flex-container">
-        <h1>Eduardo Rosso Mejia</h1>
-        <h2>College Student &  Web Developer</h2>
+        <h1>EDUARDO ROSSÓ MEJÍA</h1>
+        <h2>COLLEGE STUDENT & WEB DEVELOPER</h2>
     </div>
 
     
     <!-- About Me Section -->
-    <div class="flex-container row">
+    <div class="flex-container row" id="about">
         <div class="contact-me">
-            <img src="./Images/profilepic.jpg" alt="my profile picture">
-            <h3>Contact me!</h3>
+            <img src="./Images/Mypicture.png" alt="my profile picture">
+            <h3>Contact me:</h3>
             <div>
                 <a href="https://github.com/amaxtier"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github grow" viewBox="0 0 16 16">
                     <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
                     </svg></a>
 
-                <a href="https://www.linkedin.com/in/eduardo-ross%C3%B3-mej%C3%ADa-b35b141b9/"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50" class="grow">
+                <a href="www.linkedin.com/in/eduardo-rosso-mejia-b35b141b9"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50" class="grow">
                     <path d="M41,4H9C6.24,4,4,6.24,4,9v32c0,2.76,2.24,5,5,5h32c2.76,0,5-2.24,5-5V9C46,6.24,43.76,4,41,4z M17,20v19h-6V20H17z M11,14.47c0-1.4,1.2-2.47,3-2.47s2.93,1.07,3,2.47c0,1.4-1.12,2.53-3,2.53C12.2,17,11,15.87,11,14.47z M39,39h-6c0,0,0-9.26,0-10 c0-2-1-4-3.5-4.04h-0.08C27,24.96,26,27.02,26,29c0,0.91,0,10,0,10h-6V20h6v2.56c0,0,1.93-2.56,5.81-2.56 c3.97,0,7.19,2.73,7.19,8.26V39z"></path>
                 </svg></a>
 
@@ -59,7 +58,7 @@
             </div>
         </div>
         <div class="about-me item-shadow information">
-            <h3>About me</h3>
+            <h3>ABOUT ME</h3>
             <p>
                 I am a bilingual Computer Science student at Pontificia Universidad Católica Madre y Maestra (PUCMM). My academic background, combined with a deep interest in technology and a quick ability to adjust, has allowed me to develop a strong foundation in web development, focusing on HTML, CSS, JavaScript, and front-end frameworks as well as Python for backend development. My approach to learning is proactive and hands-on, which allows me to tackle challenges with confidence and curiosity. I’m committed to creating efficient and accessible web solutions, always striving for performance optimization and clean, maintainable code. My quick learning ability and dedication to improving efficiency enables me to adapt swiftly to new challenges and technologies.
             </p>
@@ -71,8 +70,8 @@
     </div>
 
     <!-- Experience -->
-    <div class="flex-container">
-        <h3>Work Experience</h3>
+    <div class="flex-container" id="experience">
+        <h3>WORK EXPERIENCE</h3>
         <ul class="work-container">
             <div class="work item-shadow information">
                 <li>
@@ -98,8 +97,8 @@
     </div>
 
     <!-- Skills -->
-    <div class="flex-container">
-        <h3>Skills</h3>
+    <div class="flex-container" id="skills">
+        <h3>SKILLS</h3>
         <h4>Technical</h4>
             <ul class="skills">
                 <li>Microsoft Office</li>
@@ -118,6 +117,7 @@
                 <li>UI</li>
                 <li>Git & Github</li>
             </ul>
+
         <h4>Soft</h4>
             <ul class="skills">
                 <li>Teamwork</li>
@@ -133,8 +133,8 @@
     </div>
 
     <!-- Projects -->
-    <div class="flex-container">
-        <h3>Projects</h3>
+    <div class="flex-container" id="projects">
+        <h3>PROJECTS</h3>
         <div class=" grid">
             <a href="./Projects/Tindog/Tindog.html">
                 <div class="flex-container project grow">
